<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/margin_330"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/tlBaseUrl"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base_url"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:text="@string/base_url_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/tlBaseUrlImageAndVideo"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base_url_image_and_video"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:text="@string/base_url_image_and_video_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/tlToken"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:text="@string/token_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/tlUserId"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:text="@string/user_id_value" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/tlQuizId"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quiz_id"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/four" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_32" />

        <com.google.android.material.button.MaterialButton
            android:id="@id/btnEnterExam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_exam"
            android:textColor="@color/secondary_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>